# nvfuser_assignment

./: .gitignore  Assignment.sln  Assignment.vcxproj  MODULE.bazel  Makefile  README  WORKSPACE.bazel  cuda.code-workspace  device_patterns.cuh  device_tensor.cu  device_tensor.cuh  device_virtual_scalar.cuh  dfg.dot  gpu_timer.cuh  host_tensor.cu  host_tensor.cuh  kernel.cu  main.cu  ops.cuh  tensor.cuh
Assignment/x64/Debug/: Assignment.exe.recipe  Assignment.ilk  device_tensor.cu.cache  host_tensor.cu.cache  host_tensor.cu13496249.deps  kernel.cu-820477080.deps  kernel.cu.cache
Assignment/x64/Debug/Assignment.tlog/: Assignment.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: device_patterns.cuh  device_tensor.cu  device_tensor.cuh  host_tensor.cu  host_tensor.cuh  main.cu  ops.cuh  tensor.cuh  utils.cuh
x64/Debug/: Assignment.exe.recipe  Assignment.exp  Assignment.ilk  Assignment.lib  device_tensor.cu.cache  device_tensor.cu1536846105.deps  host_tensor.cu.cache  kernel.cu.cache  main.cu-1842370256.deps  main.cu.cache
x64/Debug/Assignment.tlog/: Assignment.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
