load("@rules_cuda//cuda:defs.bzl", "cuda_binary")

cuda_binary(
    name = "interview_problem",
    srcs = glob(["src/*.cu"]),
    hdrs = glob(["src/*.cuh"]),
    copts = [
        "-O3",
        "-g",
        "-std=c++14",
        "--expt-relaxed-constexpr",
        "-Isrc",
        "-I/usr/local/cuda/include",  # Adjust CUDA path if needed
        "-gencode=arch=compute_35,code=sm_35",
        "-gencode=arch=compute_50,code=sm_50",
        "-gencode=arch=compute_52,code=sm_52",
        "-gencode=arch=compute_60,code=sm_60",
        "-gencode=arch=compute_61,code=sm_61",
        "-gencode=arch=compute_70,code=sm_70",
        "-gencode=arch=compute_75,code=sm_75",
    ],
    outs = ["bin/interview_problem.exe"],  # Output path
)
