load("@rules_cuda//cuda:defs.bzl", "cuda_binary")

cuda_binary(
    name = "interview_problem",
    srcs = glob(["src/*.cu"]),
    hdrs = glob(["src/*.cuh"]),
    copts = [
        "-O3",
        "-g",
        "-std=c++20",
        "--expt-relaxed-constexpr",
        "-I/C:/Cuda10/include", 
        "--cuda-path=C:/Cuda13/bin", 
        "-gencode=arch=compute_75,code=sm_75",
    ],
    outs = ["bin/interview_problem.exe"],  # Output path
)
